--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ html {
   margin : 0 auto;
 }
 
-.section {
+section {
   padding: 80px 0;
 }
 
@@ -42,7 +42,7 @@ header {
   width: 100vw;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
 
 /* Hero button */
@@ -92,14 +92,14 @@ header {
 
 .main-nav li {
   display: inline-block;
-  padding: 10px;
-  margin-right: 20px;
+  padding: 5px;
+  margin-right: 5px;
 }
 
 .main-nav li a:link,
 .main-nav li a:visited{
   color: #fff;
-  font-size: 100%;
+  font-size: 80%;
   padding-bottom: 10px;
   text-decoration: none;
   text-transform: uppercase;
@@ -117,3 +117,84 @@ header {
 /* End of nav bar*/
 
 /* End of header */
+
+
+
+/* Services section */
+h2 {
+  text-align: center;
+  font-size: 180%;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  font-weight: 300;
+}
+
+h2::after {
+  display: block;
+  content: " ";
+  height: 2px;
+  width: 100px;
+  background-color: #f87060;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.box {
+  padding: 0 5%;
+  margin-top: 40px;
+}
+
+.services-text {
+  line-height: 145%;
+  text-align: justify;
+}
+
+.icon-big {
+  display: block;
+  width: auto;
+  height: 70px;
+  margin: 0 auto;
+  color:  #f87060;
+  margin-bottom: 10px;
+}
+
+/* End of services section */
+
+
+/* About section */
+
+.section-about {
+  background-color: #f2f2f2;
+}
+
+.parts {
+  margin-bottom: 10px;
+  border-bottom: 2px solid #cccccc;
+}
+
+.parts:last-of-type{
+  border: none;
+  font-style: italic;
+}
+
+.about-text {
+  text-align: left;
+  line-height: 145%;
+}
+
+
+.author-pic {
+  margin-left: 0px;
+  display: block;
+  height: 200px;
+  width: auto;
+  border-radius: 50%;
+}
+
+.author-name {
+  margin-top: 20px;
+  text-align: center;
+  margin-left: 40px;
+}
+
+/* End of about section */
