--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -164,7 +164,7 @@ h2::after {
 /* About section */
 
 .section-about {
-  background-color: #f2f2f2;
+  background-color: #f4f4f4;
 }
 
 .parts {
@@ -224,18 +224,201 @@ h2::after {
   margin-left: 5%;
 }
 
-a:link,
-a:visited {
+.email-link:link,
+.email-link:visited {
   text-decoration: none;
   color: #f87060;
   transition: border-bottom 0.2s, color 0.2s;
 }
 
-a:hover,
-a:active {
+.email-link:hover,
+.email-link:active {
   border-bottom: 2px solid #f87060;
   color : #555;
 }
 
 
 /* End of who are we section*/
+
+/* Gallery */
+.section-gallery {
+  padding: 0;
+}
+
+.gallery {
+  list-style: none;
+  width: 100%;
+}
+
+.gallery li{
+  display: inline-block;
+  float: left;
+  width: 25%;
+}
+
+.gallery-showcase {
+  width: 100%;
+  margin: 0;
+  background-color: #000;
+  overflow: hidden;
+}
+
+.gallery-showcase img {
+  width: 100%;
+  height: auto;
+  opacity: 0.7;
+  transform: scale(1.15);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.gallery-showcase img:hover,
+.gallery-showcase img:active {
+  transform: scale(1.0);
+  opacity: 1.0;
+}
+/* End of gallery*/
+
+/* Find us */
+
+.section-findus{
+  padding-top: 40%;
+}
+
+.step-boxs {
+  margin-bottom: 80px;
+}
+
+.step-boxs:first-child {
+  text-align: right;
+  padding-right: 3%;
+  margin-top: 30px;
+}
+
+.step-boxs:last-child {
+  padding-left: 5%;
+  margin-top: 35px;
+}
+.works-steps {
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.works-steps:last-of-type {
+  margin-bottom: 80px;
+}
+
+.works-steps div {
+  border : 2px solid #f87060;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  color: #f87060;
+  font-size: 150%;
+  text-align: center;
+  padding: 1%;
+  display: inline-block;
+  float: left;
+  margin-right: 50px;
+}
+
+
+.works-steps p {
+  text-align: justify;
+}
+
+
+.social-icons {
+  list-style: none;
+  display: inline-block;
+  margin-left: 100px;
+}
+
+.social-icons li a:link,
+.social-icons li a:visited {
+  margin-right: 40px;
+}
+
+.findus-links {
+  font-size: 150%;
+  color: #000;
+  transition: color 0.2s, font-size 0.2s;
+}
+
+.youtube:hover {
+  color: #dd4b39;
+  font-size: 170%;
+}
+.facebook:hover {
+  color:  #3b5998;
+  font-size: 170%;
+}
+
+.telegram:hover{
+  color: #55acee;
+  font-size: 170%;
+}
+
+.whatsapp:hover{
+  color: #00cc00;
+  font-size: 170%;
+}
+
+/* End of find us*/
+
+/* Footer */
+footer {
+  background-color: #414770;
+  padding: 20px;
+  color: #fff;
+}
+
+.footer-boxs {
+  margin-top: 0;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.footer-nav li{
+  display: inline-block;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited{
+  text-decoration: none;
+  padding: 2px;
+  margin-right: 10px;
+  font-size: 80%;
+  color: #fff;
+  transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+  color: #ddd;
+}
+
+.developer-features {
+  float: right;
+}
+
+.developer-features p{
+  margin-bottom: 10px;
+}
+
+.developer-features p{
+  font-size: 70%;
+}
+
+.developer-icon {
+  font-size: 100%;
+  padding-right: 5px;
+}
+
+.copy-right {
+  text-align: center;
+}
+
+/* End of footer*/
