--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,38 +39,12 @@ section {
 header {
   background-image: url('img/background_image-min.jpg');
   height: 100vh;
-  width: 100vw;
   background-position: center;
   background-size: cover;
   background-attachment: scroll;
 }
 
-/* Hero button */
-.hero-button {
-  position: absolute;
-  top: 70%;
-  left: 42%;
-}
 
-.btn {
-  text-decoration: none;
-  font-size: 150%;
-  color: #fff;
-  padding: 10px;
-}
-
-.btn-outline:link,
-.btn-outline:visited {
-  border: 2px solid #f87060;
-  border-radius: 5px;
-  transition: background-color 0.2s;
-}
-
-.btn-outline:active,
-.btn-outline:hover {
-  background-color: #f87060;
-}
-/* End of hero button */
 
 /* Nav bar */
 
@@ -112,6 +86,19 @@ header {
   border-bottom: 2px solid #f87060;
 }
 
+
+.sticky {
+position: fixed;
+background-color: #fff;
+width: 100%;
+box-shadow: 2px 2px 2px #eeffee;
+z-index: 9999;
+padding: 2px;
+}
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+  color: #000;
+}
 
 
 /* End of nav bar*/
