--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -127,13 +127,14 @@ h2::after {
 }
 
 .box {
-  padding: 0 5%;
+  padding: 0;
   margin-top: 40px;
 }
 
 .services-text {
+  font-size: 90%;
   line-height: 145%;
-  text-align: justify;
+
 }
 
 .icon-big {
@@ -180,16 +181,19 @@ h2::after {
 
 .author-name {
   margin-top: 20px;
-  text-align: center;
+  text-align: left;
   margin-left: 40px;
 }
 
 /* End of about section */
 
 /* Who are we section */
+.who-box {
+padding: 6%;
+}
 .who-pic {
   height: 200px;
-  width: 100%;
+  width: 200px;
   border-radius: 50%;
   margin-bottom: 20px;
 }
