--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,3 +1,10 @@
 @media only screen and (max-width : 1200px){
+    .row {
+        padding: 0 2%;
+    }
+}
+
+@media only screen and (max-width : 1023px){
     
 }
+
